# coldfront-plugin-keycloak

./: README.md  docker-compose.yaml  requirements.txt  setup.cfg  test-requirements.txt
src/: local_settings.py
src/coldfront_plugin_keycloak_usersearch/: apps.py  config.py  keycloak.py  search.py
