[metadata]
name = coldfront_plugin_keycloak_usersearch
version = 0.1.0
author = Kristi Nikolla
author_email = knikolla@bu.edu
description = Keycloak user search plugin for ColdFront
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/knikolla/coldfront-plugin-keycloak-usersearch
project_urls =
    Bug Tracker = https://github.com/knikolla/coldfront-plugin-keycloak-usersearch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    coldfront >= 1.0.4
    requests

[options.packages.find]
where = src
